--- a/ggplot2Train.Rmd
+++ b/ggplot2Train.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "ggplot2Train"
+title: "ggplot2 Train"
 output:
   pdf_document: default
   html_document: default
@@ -8,13 +8,166 @@ output:
 ```{r, echo=FALSE}
 library(ggplot2)
 data("diamonds")
+data("economics")
+data("mpg")
 
 set.seed(233)
-dsmall <- diamonds[sample(nrow(diamonds), 100),]
+dsmall <- diamonds[sample(nrow(diamonds), 300),]
 ```
+
+```{r}
+# functions 
+year <- function(dt) {
+    as.POSIXlt(dt)$year + 1900
+}
+```
+
 
 ## qplot
 ```{r}
+# Basic plot
 qplot(carat, price, data = dsmall)
+qplot(log(carat), log(price), data = dsmall)
+qplot(x*y*z, carat, data = dsmall)
+qplot(x*y*z, price, data = dsmall)
+
+# color
+qplot(carat, price, data = dsmall, colour = color, shape = cut)
+
+qplot(carat, price, data = diamonds, alpha = I(0.05))
+
+# geom type/smooth
+qplot(carat, price, data = dsmall, geom = c("point", "smooth"))
+qplot(carat, price, data = diamonds, geom = c("point", "smooth"))
+
+# geom type/boxplot
+qplot(color, price/carat, data = diamonds, geom = "jitter", alpha = I(1/50))
+qplot(color, price/carat, data = diamonds, geom = "boxplot")
+
+# geom type/histogram and density
+qplot(carat, data = diamonds, geom = "histogram")
+qplot(carat, data = diamonds, geom = "density")
+
+qplot(carat, data = diamonds, geom = "histogram", binwidth = 0.01, xlim = c(0, 3))
+qplot(carat, data = diamonds, geom = "histogram", binwidth = 1, xlim = c(0, 3))
+
+qplot(carat, data = diamonds, geom = "histogram", binwidth = 0.01,
+      xlim = c(0, 3), colour = color)
+
+qplot(carat, data = diamonds, geom = "density", colour = color)
+
+# geom type/line and path
+qplot(date, unemploy/pop, data = economics, geom = "line")
+qplot(date, uempmed, data = economics, geom = "line")
+
+qplot(unemploy/pop, uempmed, data = economics, geom = c("point", "path"))
+
+qplot(unemploy/pop, uempmed, data = economics, geom = c("point", "path"),
+      colour = year(date))
+
+# facets
+qplot(carat, data = diamonds, facets = color ~ ., geom = "histogram",
+      binwidth = 0.1, xlim = c(0, 3))
+# use density
+qplot(carat, ..density.., data = diamonds, facets = color ~ ., geom = "histogram",
+      binwidth = 0.1, xlim = c(0, 3))
+
+# plotmath
+qplot(carat, price/carat, data = dsmall,
+      ylab = expression(frac(price, carat)),
+      xlab = "Weight (carats)",
+      xlim = c(.2, 1))
+
+qplot(carat, price, data = dsmall, log = "xy")
 ```
+
+## qplot with layer
+```{r}
+qplot(displ, hwy, data = mpg, colour = factor(cyl))
+
+qplot(displ, hwy, data = mpg, facets = . ~ year) + geom_smooth(method = "loess")
+
+library(scales)
+bestfit <- geom_smooth(method = "lm", se = T, colour = alpha("steelblue", 0.5),
+                       size = 2)
+qplot(sleep_rem, sleep_total, data = msleep) + bestfit
+qplot(awake, brainwt, data = msleep, log = "y") + bestfit
+qplot(bodywt, brainwt, data = msleep, log = "xy") +bestfit
+```
+
+## ggplot geom
+```{r}
+p <- ggplot(diamonds, aes(x = carat))
+p + geom_histogram(binwidth = 2, fill = "steelblue")
+
+# alt dataset 
+p <- ggplot(mtcars, aes(mpg, wt, colour = cyl)) + geom_point() # mapping colour
+p %+% transform(mtcars, mpg = mpg^2)1
+
+# update eas
+p <- ggplot(mtcars, aes(x = mpg, y = wt))
+p + geom_point()
+p + geom_point(aes(colour = factor(cyl))) # mapping
+p + geom_point(aes(y = disp))
+
+# set attr and map attr
+p <- ggplot(mtcars, aes(mpg, wt))
+p + geom_point(colour = "darkblue")       # set attr
+p + geom_point(aes(colour = "darkblue"))  # create str var and mapping
+
+# group
+library(nlme)
+p <- ggplot(Oxboys, aes(age, height, group = Subject, colour = Subject)) + geom_line()
+p + geom_smooth(aes(group = 1), method = "lm", se = F, size = 2)
+
+boysBox <- ggplot(Oxboys, aes(Occasion, height)) + geom_boxplot() # Occasion is default group
+boysBox + geom_line(aes(group = Subject), colour = "#3366FF")     # Reset group
+
+# Conformity
+d <- ggplot(diamonds, aes(carat)) + xlim(0, 3)
+d + stat_bin(aes(ymax = ..count..), binwidth = 0.1, geom = "area")
+d + stat_bin(
+    aes(size = ..density..),
+    binwidth = 0.1,
+    geom     = "point",
+    position = "identity"
+)
+d + stat_bin(
+    aes(fill = ..count..),
+    binwidth = 0.1,
+    geom     = "tile",
+    position = "identity"
+)
+
+# Update attr and dataset
+require(nlme, quietly = T, warn.conflicts = F)
+model <- lme(height ~ age, data = Oxboys, random = ~ 1 + age | Subject) # redis not random
+oplot <- ggplot(Oxboys, aes(age, height, group = Subject)) + geom_line()
+
+age_grid <- seq(-1, 1, length = 10)
+subject  <- unique(Oxboys$Subject)
+preds <- expand.grid(age = age_grid, Subject = subject)
+preds$height <- predict(model, preds)
+
+Oxboys$fitted <- predict(model)
+Oxboys$resid  <- with(Oxboys, fitted - height)
+
+oplot + geom_line(data = preds, colour = "#3366FF", size = 0.4)
+oplot %+% Oxboys + aes(y = resid) + geom_smooth(aes(group = 1)) # redis not random
+#--
+model2 <- update(model, height ~ age + I(age^2)) # redis random
+Oxboys$fitted2 <- predict(model2)
+Oxboys$resid2  <- with(Oxboys, fitted2 - height)
+
+oplot %+% Oxboys + aes(y = resid2) + geom_smooth(aes(group = 1)) # redis random
+```
+
+## ggplot stat
+```{r}
+# use density
+# generated var will be around by ..
+ggplot(diamonds, aes(carat)) +
+    geom_histogram(aes(y = ..density..), binwidth = 0.1)
+```
+
 
