--- a/ggplot2Train.Rmd
+++ b/ggplot2Train.Rmd
@@ -169,5 +169,199 @@ oplot %+% Oxboys + aes(y = resid2) + geom_smooth(aes(group = 1)) # redis random
 ggplot(diamonds, aes(carat)) +
     geom_histogram(aes(y = ..density..), binwidth = 0.1)
 ```
+## ggplot2 toolbox 
+```{r}
+df <- data.frame(
+    x     = c(3, 1, 5),
+    y     = c(2, 4, 6),
+    label = c("a", "b", "c")
+)
+p <- ggplot(df, aes(x, y)) + xlab(NULL) + ylab(NULL)
 
+p + geom_point() + labs(title = "geom_point")
+p + geom_bar(stat = "identity") + labs(title = "geom_bar(\"identity\")")
+p + geom_line() + labs(title = "geom_line")
+p + geom_area() + labs(title = "geom_area")
+p + geom_path() + labs(title = "geom_path")
+p + geom_text(aes(label = label)) + labs(title = "geom_text")
+p + geom_tile() + labs(title = "geom_tile")
+p + geom_polygon() + labs(title = "geom_polygon")
+
+# data distribution
+depth_dist <- ggplot(diamonds, aes(depth)) + xlim(58, 68)
+
+depth_dist +
+    geom_histogram(aes(y = ..density..), binwidth = 0.1) + facet_grid(cut ~ .)
+depth_dist + geom_histogram(aes(fill = cut), binwidth = 0.1, position = "fill")
+depth_dist + geom_freqpoly(aes(y = ..density.., colour = cut), binwidth = 0.1)
+
+library(plyr)
+qplot(cut, depth, data = diamonds, geom = "boxplot")
+qplot(carat, depth, data = diamonds, geom = "boxplot",
+      group = round_any(carat, 0.1, floor), xlim = c(0, 3))
+
+qplot(class, cty, data = mpg, geom = "jitter")
+qplot(class, drv, data = mpg, geom = "jitter")
+
+qplot(depth, data = diamonds, geom = "density", xlim = c(54, 70))
+qplot(depth, data = diamonds, geom = "density", xlim = c(54, 70),
+      fill = cut, alpha = I(0.2))
+
+## overplotting
+df <- data.frame(x = rnorm(5000), y = rnorm(5000))
+norm <- ggplot(df, aes(x, y))
+norm + geom_point()
+norm + geom_point(shape = 1)
+norm + geom_point(shape = ".")
+norm + geom_point(alpha = 1/5, colour = "black")
+
+td <- ggplot(diamonds, aes(table, depth)) + xlim(50, 70) + ylim(50, 70)
+td + geom_point()
+td + geom_jitter()
+
+jit <- position_jitter(width = 0.5)
+td + geom_jitter(position = jit)
+td + geom_jitter(position = jit, colour = "black", alpha = 1/10)
+td + geom_jitter(position = jit, colour = "black", alpha = 1/50)
+td + geom_jitter(position = jit, colour = "black", alpha = 1/200)
+
+# bin..
+library(hexbin)
+d<- ggplot(diamonds, aes(carat, price)) + xlim(1, 3) + 
+    theme(legend.position = "none")
+d + stat_bin2d()
+d + stat_bin2d(bins = 10)
+d + stat_bin2d(binwidth = c(0.02, 200))
+d + stat_binhex()
+d + stat_binhex(bins = 10)
+d + stat_binhex(binwidth = c(0.02, 200))
+
+# density2d
+d + geom_point()  + geom_density2d()
+d + stat_density2d(geom = "point", aes(size = ..density..), contour = F) + scale_size_area()
+d + stat_density2d(geom = "tile", aes(fill = ..density..), contour = F)
+last_plot() + scale_fill_gradient(limits = c(1e-5, 8e-4))
+```
+
+## Uncertainty
+```{r}
+d <- subset(diamonds, carat < 2.5 & rbinom(nrow(diamonds), 1, 0.2) == 1)
+d$lcarat <- log10(d$carat)
+d$lprice <- log10(d$price)
+
+detrend <- lm(lprice ~ lcarat, data = d)
+d$lprice2 <- resid(detrend)
+
+mod <- lm(lprice2 ~ lcarat * color, data = d)
+
+library(effects)
+effectdf <- function(...) {
+    suppressWarnings(as.data.frame(effect(...)))
+}
+
+color <- effectdf("color", mod)
+both1 <- effectdf("lcarat:color", mod)
+
+carat <- effectdf("lcarat", mod, default.levels = 50)
+both2 <- effectdf("lcarat:color", mod, default.levels = 3)
+
+qplot(lcarat, lprice, data = d, colour = color)
+qplot(lcarat, lprice2, data = d, colour = color)
+
+fplot <- ggplot(mapping = aes(y = fit, ymin = lower, ymax = upper)) + 
+    ylim(range(both2$lower, both2$upper))
+
+fplot %+% color + aes(x = color) + geom_point() + geom_errorbar()
+
+fplot %+% both2 +
+    aes(x = color, corlour = lcarat, group = interaction(color, lcarat)) +
+    geom_errorbar() +
+    geom_line(aes(group = lcarat)) +
+    scale_color_gradient()
+
+fplot %+% carat + aes(x = lcarat) + geom_smooth(stat = "identity")
+
+end <- subset(both1, lcarat == max(lcarat))
+fplot %+% both1 + 
+    aes(x = lcarat, colour = color) +
+    geom_smooth(stat = "identity") + 
+    scale_color_hue() +
+    theme(legend.position = "none") +
+    geom_text(aes(label = color, x = lcarat + 0.02), end)
+
+```
+
+## Summary
+```{r}
+midm <- function(x) {
+    mean(x, trim = 0.5)
+}
+
+require("ggplot2movies")
+mov <- movies[sample(nrow(movies), 50000), ]
+m2 <- ggplot(mov, aes(x = factor(round(rating)), y = votes)) + geom_point()
+
+m2 + stat_summary(aes(colour = "trimmed"), fun.y = midm, geom = "point") + 
+    stat_summary(aes(colour = "raw"), fun.y = mean, geom = "point") +
+    scale_color_hue("Mean")
+
+iqr <- function(x, ...) {
+    qs <- quantile(as.numeric(x), c(0.25, 0.75), na.rm = T)
+    names(qs) <- c("ymin", "ymax")
+    qs
+}
+
+ggplot(movies, aes(x = year, y = rating)) +
+    stat_summary(fun.data = iqr, geom = "ribbon")
+```
+
+## Comment
+```{r}
+unemp <- qplot(date, unemploy, data = economics, geom = "line",
+               xlab = "", ylab = "No. unemployed (1000s)")
+
+presidential <- presidential[-(1:3),]
+yrng <- range(economics$unemploy)
+xrng <- range(economics$date)
+unemp + geom_vline(aes(xintercept = as.numeric(start)), data = presidential)
+
+library(scales)
+unemp + geom_rect(aes(NULL, NULL, xmin = start, xmax = end, ymin = yrng[1],
+                      ymax = yrng[2], fill = party), 
+                  data = presidential, alpha = 0.2 ) +
+    scale_fill_manual(values = c("blue", "red"))
+
+last_plot() + geom_text(aes(x = start, y = yrng[1], label = name),
+                        data = presidential, size = 3, hjust = 0, vjust = 0)
+
+caption <- paste(strwrap("Unemployment rates in the US have varied a lot 
+                         over the year", 40), collapse = "\n")
+unemp + geom_text(aes(x, y, label = caption),
+                  data = data.frame(x = xrng[1], y = yrng[2]),
+                  hjust = 0, vjust = 1, size = 4)
+
+height <- subset(economics, unemploy == max(unemploy))
+unemp + geom_point(data = height, size = 3, colour = "red", alpha = 0.5)
+```
+
+## Weighted data
+```{r}
+qplot(percwhite, percbelowpoverty, data = midwest)
+qplot(percwhite, percbelowpoverty, data = midwest,
+      size = poptotal/1e6) + 
+    scale_size_area("Population\n(millions)", breaks = c(0.5, 1, 2, 4))
+
+qplot(percwhite, percbelowpoverty, data = midwest, size = area) +
+    scale_size_area()
+
+lm_smooth <- geom_smooth(method = "lm", size = 1)
+qplot(percwhite, percbelowpoverty, data = midwest) + lm_smooth
+
+qplot(percwhite, percbelowpoverty, data = midwest,
+      weight = popdensity, size = popdensity) + lm_smooth
+
+qplot(percbelowpoverty, data = midwest, binwidth = 1)
+qplot(percbelowpoverty, data = midwest, weight = poptotal,
+      binwidth = 1) + ylab("Population")
+```
 
